# serializer version: 1
# name: test_failing_plugin[config_ng]
  '''
  [
      {
          "connection_name": "test",
          "parameters": {
              "account": "test"
          },
          "is_default": false
      },
      {
          "connection_name": "integration",
          "parameters": {
              "account": "po52878",
              "user": "mraba",
              "host": "po52878.snowflakecomputing.com",
              "database": "SNOWCLI_DB",
              "warehouse": "xsmall",
              "role": "integration_tests",
              "authenticator": "SNOWFLAKE_JWT"
          },
          "is_default": false
      }
  ]
  
  '''
# ---
# name: test_failing_plugin[legacy]
  '''
  [
      {
          "connection_name": "test",
          "parameters": {
              "account": "test"
          },
          "is_default": false
      }
  ]
  
  '''
# ---
